# hello_django

./: Justfile  README.md  pyproject.toml
hello_app/: apps.py  models.py  serializers.py  urls.py  views.py
hello_app/migrations/: 0001_initial.py
hello_project/: asgi.py  settings.py  urls.py  wsgi.py
